--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -14,7 +14,7 @@ body {
   font-family:'Catamaran', sans-serif;
   line-height: 1.6;
   color: #333;
-  font-size: :1.1rem;
+  font-size: 1.1rem;
   }
 
 h1, h2, h3, h4 {
