--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #d19292;
-  --secondary-color: #E5B2B3;
+  --primary-color: #333;
+  --secondary-color: #444;
   --overlay-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -69,7 +69,7 @@ img {
 }
 
 .navbar .nav a:hover {
-  color: #DE87FF;
+  color:#f75748;
 }
 
 /* Section a */
@@ -133,11 +133,12 @@ img {
 /* Section C */
 .section-c .gallery {
   display: grid;
-  grid-template-rows: 400px 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 350px 350px;
+  grid-template-columns: 500px 525px 525px;
   grid-template-areas: 
-  "topleft center topright" 
-  "bottomleft center bottomright";
+"center topleft topright"
+"center bottomleft bottomright";
+  overflow: hidden;
 } 
 
 #image-topleft {
@@ -145,35 +146,52 @@ img {
 }
 
 #image-center {
-  grid-area: topleft;
+  grid-area: center;
 }
 
 #image-topright {
   grid-area: topright;
 }
 
-
-
-.section-c .gallery a:first-child {
-  grid-row: 1/3;
-  grid-column: 1/3;
-} 
-
-.section-c .gallery a:nth-child(2) {
-  grid-column: 3/5;
-
+#image-bottomleft {
+  grid-area: bottomleft;
 }
 
-.section-c .gallery img, .section-c .gallery a {
-  width: 100%;
-  height: 100%;
+#image-bottomright {
+  grid-area: bottomright;
 }
+
+/* Section D */
+.section-d {
+  margin: 2rem 0;
+}
+
+.section-d .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-d h1 {
+  font-size: 4rem;
+  color: var(--primary-color)
+}
+
+.section-d p {
+  margin: 1 rem 0;
+}
+
 
 /* Footer */
 .section-footer {
   background: var(--primary-color);
   color: #fff;
   padding: 4 rem 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
 }
 
 .section-footer .container {
@@ -249,7 +267,7 @@ img {
 /* Utilities */
 .btn {
   display: inline-block;
-  background: var(--primary-color);
+  background: #f88379 ;
   color: #fff;
   padding: 0.8rem 1.5rem;
   border: none;
@@ -259,7 +277,7 @@ img {
 }
 
 .btn:hover {
-  background: var(--secondary-color);
+  background: #f75748  ;
 } 
 
 .overlay {
@@ -290,39 +308,51 @@ img {
     margin: auto;
   }
 
-  .section-b-inner h2 {
-    font-size: 3.5rem;
-  }
-
-  .section-c .gallery {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .section-c .gallery a:first-child {
-    grid-row: 1/1;
-    grid-column: 1/1;
-  }
-
-  .section-c .gallery a:nth-child(2) {
-    grid-row: 2/1;
-    grid-column: 2/4;
-  }
-
-  .section-c .gallery a:last-child {
-    display: none;
-  }
-
-  .section-footer {
-    padding: 2rem 0;
-  }
-
-  .section-footer .container {
+  .section-d .container{
     grid-template-columns: 1fr;
     text-align: center;
   }
 
-  .section-footer div:nth-child(2),
-  .section-footer div:nth-child(3) {
-    display: none;
+  .section-d .container div:first-child {
+    order: 2; 
   }
+  .section-d .container div:last-child {
+    order: -1; 
+  }
+
+  .section-d img {
+    width: 60%;
+    margin: auto;
+  }
+
+  .section-b-inner h3 {
+    font-size: 60px;
+  }
+  .section-b-inner h2 {
+    font-size: 20px;
+  }
+
+  .section-c .gallery {
+      grid-template-rows: 170px 170px 170px;
+      grid-template-columns: 1fr 1fr; 
+      grid-template-areas: 
+      "topleft topright"
+      "center bottomright"
+      "center bottomleft";
+      overflow: hidden;
+    }
+
+    .section-footer h2 {
+      font-size: 20px;
+    }
+
+    #blog-posts {
+      display: none;
+    }
+
+.email-form {
+  width: 140%
 }
+  }
+
+  
